--- a/style.css
+++ b/style.css
@@ -56,3 +56,9 @@ ul li a:hover::after {
   -webkit-text-stroke: 1px #000;
   transform: translate(20px, -20px);
 }
+
+@media screen and (max-width: 420px) {
+  ul li a {
+    font-size: 3.25rem;
+  }
+}
